// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupScreen should render header correctly 1`] = `
<Connect(Header)
  left={<Connect(BackButton) />}
  right={
    <IconButton
      name="addContactIcon"
      onPress={[Function]}
      size={24}
      type="MissionHub"
    />
  }
  shadow={false}
  title="Test  Org"
/>
`;

exports[`GroupScreen should render header correctly for user_created org 1`] = `
<Connect(Header)
  left={<Connect(BackButton) />}
  right={null}
  shadow={false}
  title="Test  Org"
/>
`;
